--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
   font-family: sans-serif;
 }
 
+div {
+  border: solid 1px;
+}
+
+div.portrait {
+  padding: 10px
+}
+
 /* Container for carrousel */
 #carrousel {
   display: flex;
@@ -20,6 +28,8 @@
 }
 
 #myImg:hover {opacity: 0.7;}
+
+
 
 /* The Modal (background) */
 .modal {
